[project]
name = "sentence-feature"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ifritJP", email = "15117169+ifritJP@users.noreply.github.com" }
]
dependencies = [
    "sentence-transformers>=3.4.1",
    "ipython>=9.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sentence_feature"]
